Fix education content vertical alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,6 +38,7 @@ a {
     display: flex;
     justify-content: center;
     height: 85vh;
+    align-items: center;
 }
 
 nav {
